--- a/MeAgendaAi.CrossCutting/MeAgendaAi.CrossCutting.csproj
+++ b/MeAgendaAi.CrossCutting/MeAgendaAi.CrossCutting.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MeAgendaAi.Data\MeAgendaAi.Data.csproj" />
+    <ProjectReference Include="..\MeAgendaAi.Domain\MeAgendaAi.Domain.csproj" />
+    <ProjectReference Include="..\MeAgendaAi.Service\MeAgendaAi.Service.csproj" />
+  </ItemGroup>
+
 </Project>
