--- a/MeAgendaAi.Application/appsettings.json
+++ b/MeAgendaAi.Application/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "ConnectionString": "Password=4dm1n!;Persist Security Info=True;User ID=admin;Initial Catalog=meagendaai;Data Source=LAPTOP-CEI7D250\\SQLEXPRESS"
+  },
   "AllowedHosts": "*"
 }
