--- a/MeAgendaAi.Data/MeAgendaAi.Data.csproj
+++ b/MeAgendaAi.Data/MeAgendaAi.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200926191856_ModelarClassesPrincipais.cs" />
+    <Compile Remove="Migrations\20200926191856_ModelarClassesPrincipais.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
