--- a/MeAgendaAi.Application/appsettings.Development.json
+++ b/MeAgendaAi.Application/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "ConnectionString": "Password=4dm1n!;Persist Security Info=True;User ID=admin;Initial Catalog=meagendaai;Data Source=LAPTOP-CEI7D250\\SQLEXPRESS"
+    "ConnectionString": "Server=tcp:meagendai.database.windows.net,1433;Initial Catalog=Me agenda ai;Persist Security Info=False;User ID=AdminMeAgendaAi;Password=4dm1n!4dm1n!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
