--- a/MeAgendaAi.Application/appsettings.json
+++ b/MeAgendaAi.Application/appsettings.json
@@ -6,6 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "TokenConfiguration": {
+    "Key": "RRmS35x9Ge",
+    "Issuer": "https://meagendaai.api.com/v1",
+    "Audience": "Public",
+    "Seconds": 10800 // 3 horas 
+  },
   "ConnectionStrings": {
     //"ConnectionString": "Password=4dm1n!;Persist Security Info=True;User ID=admin;Initial Catalog=meagendaai;Data Source=LAPTOP-CEI7D250\\SQLEXPRESS",
     "ConnectionString": "Server=tcp:meagendai.database.windows.net,1433;Initial Catalog=Me agenda ai;Persist Security Info=False;User ID=AdminMeAgendaAi;Password=4dm1n!4dm1n!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
