--- a/MeAgendaAi.CrossCutting/MeAgendaAi.CrossCutting.csproj
+++ b/MeAgendaAi.CrossCutting/MeAgendaAi.CrossCutting.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
   </ItemGroup>
 
   <ItemGroup>
