--- a/MeAgendaAi.Domain/MeAgendaAi.Domain.csproj
+++ b/MeAgendaAi.Domain/MeAgendaAi.Domain.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
   </ItemGroup>
 
