--- a/MeAgendaAi.Domain/MeAgendaAi.Domain.csproj
+++ b/MeAgendaAi.Domain/MeAgendaAi.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Assets\UserImages\" />
+  </ItemGroup>
+
 </Project>
