--- a/MeAgendaAi.Application/appsettings.json
+++ b/MeAgendaAi.Application/appsettings.json
@@ -11,6 +11,10 @@
     "Issuer": "https://meagendaai.api.com/v1",
     "Audience": "Public",
     "Seconds": 10800 // 3 horas 
+  },  
+  "MailJetConfiguration": {
+    "MJ_APIKEY_PUBLIC": "3a7088454ee909faf68116e22968adc5",
+    "MJ_SECRETKEY_PRIVATE": "6e13c1d06a822f884e91ef4c6221fa36"
   },
   "ConnectionStrings": {
     //"ConnectionString": "Password=4dm1n!;Persist Security Info=True;User ID=admin;Initial Catalog=meagendaai;Data Source=LAPTOP-CEI7D250\\SQLEXPRESS",
