--- a/MeAgendaAi.CrossCutting/MeAgendaAi.CrossCutting.csproj
+++ b/MeAgendaAi.CrossCutting/MeAgendaAi.CrossCutting.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
 
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
+    <PackageReference Include="Mailjet.Api" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
