--- a/MeAgendaAi.Application/appsettings.Development.json
+++ b/MeAgendaAi.Application/appsettings.Development.json
@@ -4,9 +4,22 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
+    },
+    "URLPortal": "http://localhost:4200",
+    "TokenConfiguration": {
+      "Key": "RRmS35x9Ge",
+      "Issuer": "https://meagendaai.api.com/v1",
+      "Audience": "Public",
+      "Seconds": 10800 // 3 horas       
+    },
+    "MailJetConfiguration": {
+      "MJ_APIKEY_PUBLIC": "3a7088454ee909faf68116e22968adc5",
+      "MJ_SECRETKEY_PRIVATE": "6e13c1d06a822f884e91ef4c6221fa36"
+    },
+    "ConnectionStrings": {
+      "ConnectionString": "Server=tcp:meagendai.database.windows.net,1433;Initial Catalog=MeAgendaAi;Persist Security Info=False;User ID=AdminMeAgendaAi;Password=4dm1n!4dm1n!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
-  },
-  "ConnectionStrings": {
-    "ConnectionString": "Server=tcp:meagendai.database.windows.net,1433;Initial Catalog=Me agenda ai;Persist Security Info=False;User ID=AdminMeAgendaAi;Password=4dm1n!4dm1n!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
+
+
 }
