--- a/MeAgendaAi.Application/appsettings.json
+++ b/MeAgendaAi.Application/appsettings.json
@@ -6,12 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "URLPortal": "http://www.meagendai.com.br",
   "TokenConfiguration": {
     "Key": "RRmS35x9Ge",
     "Issuer": "https://meagendaai.api.com/v1",
     "Audience": "Public",
     "Seconds": 10800 // 3 horas 
-  },  
+  },
   "MailJetConfiguration": {
     "MJ_APIKEY_PUBLIC": "3a7088454ee909faf68116e22968adc5",
     "MJ_SECRETKEY_PRIVATE": "6e13c1d06a822f884e91ef4c6221fa36"
