--- a/MeAgendaAi.Application/appsettings.Development.json
+++ b/MeAgendaAi.Application/appsettings.Development.json
@@ -8,7 +8,8 @@
     "URLPortal": "http://localhost:4200",
     "TokenConfiguration": {
       "Key": "RRmS35x9Ge",
-      "Issuer": "https://meagendaai.api.com/v1",
+      //"Issuer": "https://meagendaai.api.com/v1",
+      "Issuer": "https://localhost:4200",
       "Audience": "Public",
       "Seconds": 10800 // 3 horas       
     },
