--- a/MeAgendaAi.Application/appsettings.json
+++ b/MeAgendaAi.Application/appsettings.json
@@ -6,10 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "URLPortal": "http://www.meagendai.com.br",
+  //"URLPortal": "http://www.meagendai.com.br",
+  "URLPortal": "http://localhost:4200",
   "TokenConfiguration": {
     "Key": "RRmS35x9Ge",
-    "Issuer": "https://meagendaai.api.com/v1",
+    //"Issuer": "https://meagendaai.api.com/v1",
+    "Issuer": "https://localhost:4200",
     "Audience": "Public",
     "Seconds": 10800 // 3 horas 
   },
