Ajustes horários e agendamentos

--- a/MeAgendaAi.Application/appsettings.json
+++ b/MeAgendaAi.Application/appsettings.json
@@ -11,7 +11,7 @@
   "TokenConfiguration": {
     "Key": "RRmS35x9Ge",
     //"Issuer": "https://meagendaai.api.com/v1",
-    "Issuer": "https://localhost:4200",
+    "Issuer": "http://localhost:4200",
     "Audience": "Public",
     "Seconds": 10800 // 3 horas 
   },
