Security configuration - Confiure ConfigureJWT.cs JWT Token Expriration Time - appsettings.json Link database local - appsettings.json Database Context - ContextFactory.cs

--- a/MeAgendaAi.Application/appsettings.Development.json
+++ b/MeAgendaAi.Application/appsettings.Development.json
@@ -18,7 +18,7 @@
       "MJ_SECRETKEY_PRIVATE": "6e13c1d06a822f884e91ef4c6221fa36"
     },
     "ConnectionStrings": {
-      "ConnectionString": "Server=tcp:meagendai.database.windows.net,1433;Initial Catalog=MeAgendaAi;Persist Security Info=False;User ID=AdminMeAgendaAi;Password=4dm1n!4dm1n!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      "ConnectionString": "Server=localhost\\SQLEXPRESS;Database=MeAgendaAi;Trusted_Connection=True;"
     }
   }
 
